--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,6 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
+
   color: #212121;
   line-height: 1.5;
 }
@@ -17,4 +18,15 @@ body {
   padding: 8px;
   max-width: 320px;
   margin-bottom: 16px;
+}
+.country-list {
+  list-style: none;
+}
+/* js-many */
+.group {
+  display: grid;
+  grid-template-columns: 0.3fr 4fr;
+}
+.span {
+  font-weight: 700;
 }
